# paperlab

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  user-research.md
src/paperlab/: __init__.py
src/paperlab/agents/: __init__.py  base.py  contextualizer.py  critic.py  methodologist.py  summarizer.py
src/paperlab/cli/: config.py  main.py
src/paperlab/ingest/: __init__.py  pdf.py
src/paperlab/orchestrator/: __init__.py  runner.py
src/paperlab/prompts/: __init__.py  contextualizer.yaml  critic.yaml  loader.py  methodologist.yaml  summarizer.yaml
src/paperlab/providers/: __init__.py  _scrub.py  base.py  discovery.py  factory.py  fake.py  keys.py  litellm_provider.py
src/paperlab/sessions/: __init__.py  export.py  store.py
src/paperlab/web/: __init__.py  app.py
tests/: test_smoke.py  test_version.py
tests/agents/: test_base.py  test_concrete.py
tests/cli/: test_cli.py  test_cli_web.py  test_config.py
tests/ingest/: test_pdf.py
tests/orchestrator/: test_runner.py
tests/prompts/: test_loader.py
tests/providers/: test_base.py  test_discovery.py  test_factory.py  test_fake.py  test_keys.py  test_litellm.py
tests/sessions/: test_export.py  test_store.py
tests/web/: test_build.py  test_process.py  test_provider_panel.py
